Change logo image instead of altoros

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
     </div>
     <!-- Division line -->
     <div class="cont-imgpartners3">
-      <img src="img/altoros.png" alt="Altoros Logo">
-      <img src="img/google.svg" alt="Google Logo">
+      <img src="img/google.svg" alt="Altoros Logo">
+      <img src="img/daumkakaologo.svg" alt="Daumkakao Logo">
       <img src="img/mozilla.svg" alt="Mozilla Logo">
       <img src="img/airbnb 1.svg" alt="airbnb Logo">
       <img src="img/naver 1.svg" alt="Naver Logo">
