Change partner logo in about section

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
       <hr>
     </div>
     <div>
-      <img src="img/altoros.png" alt="Altoros Logo">
+      <img src="img/daumkakaologo.svg" alt="Altoros Logo">
       <img src="img/google.svg" alt="Google Logo">
       <img src="img/mozilla.svg" alt="Mozilla Logo">
     </div>
